@@ -109,6 +109,25 @@ entire symbol name; \fIreplacement\fR is a replacement using Python's
 regexp reference syntax.  You may specify any number of these options;
 they will be applied in the order given on the command line.
 .TP
+\fB--symbol-hints\fR=\fIpath\fR
+Read symbol conversion hints from \fIpath\fR.  The format of
+\fIpath\fR is the same as the format output by
+\fB--write-symbol-info\fR, namely a text file with four
+whitespace-separated columns: \fIproject-id\fR, \fIsymbol\fR,
+\fIconversion\fR, and \fIparent-lod-name\fR.  \fIproject-id\fR is
+the numerical ID of the project to which the symbol belongs, counting
+from 0.  \fIproject-id\fR can be set to '.' if project-specificity is
+not needed.  \fIsymbol-name\fR is the name of the symbol being
+specified.  \fIconversion\fR specifies how the symbol should be
+converted, and can be one of the values 'branch', 'tag', or 'exclude'.
+If \fIconversion\fR is '.', then this rule does not affect how the
+symbol is converted.  \fIparent-lod-name\fR is the name of the symbol
+from which this symbol should sprout, or '.trunk.' if the symbol
+should sprout from trunk.  If \fIparent-lod-name\fR is omitted or '.',
+then this rule does not affect the preferred parent of this symbol.
+The file may contain blank lines or comment lines (lines whose first
+non-whitespace character is '#').
+.TP
 \fB--force-branch\fR=\fIregexp\fR
 Force symbols whose names match \fIregexp\fR to be branches.
 \fIregexp\fR must match the whole symbol name.
